deprecation issues (use of new Integer/Double)